--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glob": "^7.1.2",
     "glob-promise": "^3.1.0",
     "google": "^2.1.0",
+    "googleapis": "^20.1.0",
     "html-entities": "^1.2.1",
     "mathjs": "^3.15.0",
     "mysql": "github:mysqljs/mysql",
@@ -28,10 +29,16 @@
     "sandbox": "^0.8.6",
     "text-table": "^0.2.0",
     "underscore": "^1.8.3",
-    "uuid": "^3.1.0",
-    "webshot": "^0.18.0"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "standard": "^10.0.2"
   }
 }
