--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.js",
   "scripts": {
     "start": "node src/bot.js",
-    "test": "standard"
+    "test": "mocha --reporter nyan",
+    "check": "standard"
   },
   "author": "Nesffer",
   "license": "MIT",
@@ -39,6 +40,13 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^3.5.0",
     "standard": "^10.0.2"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it"
+    ]
   }
 }
