--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "keywords": [
     "telegram",
-    "bot",
-    "ness"
+    "bot"
   ],
   "author": "Nesffer",
   "license": "MIT",
@@ -31,16 +30,15 @@
     "html-entities": "^1.2.1",
     "i18n": "^0.8.3",
     "mathjs": "^3.15.0",
-    "mysql": "github:mysqljs/mysql",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "node-google-translate-skidz": "^1.1.1",
     "node-telegram-bot-api": "github:yagop/node-telegram-bot-api#experimental",
-    "phantomjs-prebuilt": "^2.1.14",
     "ping": "^0.2.2",
-    "promise-mysql": "^3.0.2",
     "random-js": "^1.0.8",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
-    "sandbox": "^0.8.6",
+    "sqlite3": "^3.1.9",
     "text-table": "^0.2.0",
     "underscore": "^1.8.3",
     "uuid": "^3.1.0",
